# cxx_template

./: .gitignore  CMakeLists.txt
src/: main.cpp
